[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.15, 0.15, 0.2, 0.7)
border_color = Color(0.35, 0.35, 0.4, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.2, 0.28, 0.85)
border_color = Color(0.5, 0.5, 0.55, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundFallback" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.1, 1)

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="VBoxLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TopSpacer" type="Control" parent="VBoxLayout"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)

[node name="Title" type="Label" parent="VBoxLayout"]
layout_mode = 2
text = "NOVO JOGO"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 72
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="Subtitle" type="Label" parent="VBoxLayout"]
layout_mode = 2
text = "Survival Game"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 0.8)

[node name="MidSpacer" type="Control" parent="VBoxLayout"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(280, 0)
theme_override_constants/separation = 12

[node name="PlayButton" type="Button" parent="VBoxLayout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Play"

[node name="MultiplayerButton" type="Button" parent="VBoxLayout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Multijogador"

[node name="SettingsButton" type="Button" parent="VBoxLayout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxLayout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 50)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Quit"

[node name="BottomSpacer" type="Control" parent="VBoxLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.4, 0.4, 0.5, 0.6)
